--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
   <artifactId>parking</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Parking</name>
-  <description>Creation of a parking and handling parking vehicules</description>
+  <description>Creation of a parking and handling parking vehicles</description>
 
     <properties>
         <kotlin.version>1.5.31</kotlin.version>
+        <java.version>1.17</java.version>
     </properties>
 
 
@@ -17,16 +18,16 @@
       <artifactId>junit</artifactId>
       <version>4.13</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.8.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-collections4</artifactId>
-      <version>4.1</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.commons</groupId>-->
+<!--      <artifactId>commons-lang3</artifactId>-->
+<!--      <version>3.8.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.commons</groupId>-->
+<!--      <artifactId>commons-collections4</artifactId>-->
+<!--      <version>4.1</version>-->
+<!--    </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>org.jetbrains.kotlin</groupId>-->
 <!--            <artifactId>kotlin-stdlib-jdk8</artifactId>-->
@@ -50,8 +51,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>1.17</source>
-          <target>1.17</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
       <plugin>
